bug fixed 56 :candidate header alignment with all component

--- a/src/app/demand-view/advance-search-candidates/advance-search-candidates.component.scss
+++ b/src/app/demand-view/advance-search-candidates/advance-search-candidates.component.scss
@@ -2,7 +2,6 @@
     position: absolute;
     right: -22px;
     //top: 55px;
-    bottom: 0;
     width: 24vw;
     height:100vh;
     background: white;
