--- a/src/app/demand-view/interview-schedule/interview-schedule.component.scss
+++ b/src/app/demand-view/interview-schedule/interview-schedule.component.scss
@@ -1,7 +1,6 @@
 .interview-form-container {
   position: absolute;
-  right: 0px;
-  bottom: 0;
+  right: -1px;
   //top: 55px;
   width: 23vw;
   height: 100vh;
